--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -6,7 +6,7 @@
   height: auto;
   padding-top: 8rem;
   padding-bottom: 8rem;
-  background: linear-gradient(90deg, fade-out($white, 0.9) 0%, fade-out($white, 0.9) 100%), url('../img/maine-coastline.jpg');
+  background: linear-gradient(90deg, fade-out($white, 0.9) 0%, fade-out($white, 0.9) 100%), url('../img/me-ireland.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
