--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -375,3 +375,14 @@ a:hover, a:focus, a:active {
 .text-secondary {
   color: #ecb807 !important;
 }
+
+.mb-1 {
+  background: rgba(165, 165, 165, 0.4);
+  border-radius: 1rem 1rem 0 0;
+  margin-bottom: -0.25rem !important;
+}
+
+h3.mb-5.head {
+  background: rgba(165, 165, 165, 0.4);
+  border-radius: 0 0 1rem 1rem;
+}
