--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -377,6 +377,11 @@ a:hover, a:focus, a:active {
   color: #ecb807 !important;
 }
 
+.my-img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .mb-1 {
   background: rgba(165, 165, 165, 0.4);
   border-radius: 1rem 1rem 0 0;
