Fix padding for About Me

--- a/scss/_special.scss
+++ b/scss/_special.scss
@@ -8,3 +8,8 @@ h3.mb-5 {
     background: rgba(165,165,165,0.4);
     border-radius: 0 0 1rem 1rem;
 }
+
+.about-me {
+  padding-left: 5%;
+  padding-right: 5%;
+}
