--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -28,7 +28,8 @@ body {
 }
 
 .content-section-heading h3 {
-  font-size: 1rem;
+  font-size: 1.6rem;
+  padding: 1.2rem 0;
   text-transform: uppercase;
 }
 
