--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -24,7 +24,8 @@ body {
     font-size: 3rem;
   }
   h3 {
-    font-size: 1rem;
+    font-size: 1.6rem;
+    padding: 1.2rem 0;
     text-transform: uppercase;
   }
 }
