--- a/scss/_special.scss
+++ b/scss/_special.scss
@@ -14,6 +14,8 @@ h3.mb-5 {
   padding-right: 5%;
 }
 
+// This is just some random CSS setting which is not applied so that
+// GitHub's server shows it properly
 .random {
   padding: 5%;
 }
