--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -368,6 +368,13 @@ a:hover, a:focus, a:active {
   font-size: 1.6rem;
 }
 
+.btn-md {
+  padding: 0.1rem 1rem;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  border-radius: 0.2rem;
+}
+
 .bg-primary {
   background-color: #1D809F !important;
 }
@@ -382,6 +389,14 @@ a:hover, a:focus, a:active {
 
 .bg-medium {
   background-color: #cdcae2;
+}
+
+.masthead-margin {
+  margin-top: 20rem;
+}
+
+.fa-chevron-down {
+  font-size: 2.5rem;
 }
 
 .my-img {
