--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -41,6 +41,14 @@ a {
   font-size: 1.6rem;
 }
 
+.btn-md {
+  padding: 0.1rem 1rem;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  border-radius: 0.2rem;
+//   opacity: 0.7;
+}
+
 .bg-primary {
   background-color: $primary !important;
 }
@@ -55,6 +63,14 @@ a {
 
 .bg-medium {
   background-color: #cdcae2;
+}
+
+.masthead-margin {
+  margin-top: 20rem;
+}
+
+.fa-chevron-down {
+  font-size: 2.5rem;
 }
 
 .my-img {
