--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -256,7 +256,7 @@ h6 {
 }
 
 .portfolio-item .caption .caption-content {
-  color: #000;
+  opacity: 0;
   margin: auto 2rem 2rem;
 }
 
@@ -297,10 +297,16 @@ h6 {
     clip-path: inset(2rem);
   }
   .portfolio-item:hover .caption {
-    background-color: rgba(29, 128, 159, 0.9);
+    background-color: rgba(236, 184, 7, 0.9);
     color: #fff;
     -webkit-clip-path: inset(2rem);
     clip-path: inset(2rem);
+  }
+  .portfolio-item:hover .caption .caption-content {
+    color: rgba(0, 0, 0, 0.9);
+    opacity: 1;
+    -webkit-transition: opacity 0.4s;
+    transition: opacity 0.4s;
   }
 }
 
