Change button margins for better readability

--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -11,6 +11,7 @@ a {
   background-color: $primary !important;
   border-color: $primary !important;
   color: $white !important;
+  margin-top: 5rem;
   &:hover,
   &:focus,
   &:active {
@@ -23,6 +24,7 @@ a {
   background-color: $secondary !important;
   border-color: $secondary !important;
   color: $white !important;
+  margin-top: 5rem;
   &:hover,
   &:focus,
   &:active {
