--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -345,6 +345,7 @@ a:hover, a:focus, a:active {
   background-color: #1D809F !important;
   border-color: #1D809F !important;
   color: #fff !important;
+  margin-top: 5rem;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
@@ -356,6 +357,7 @@ a:hover, a:focus, a:active {
   background-color: #ecb807 !important;
   border-color: #ecb807 !important;
   color: #fff !important;
+  margin-top: 5rem;
 }
 
 .btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active {
